[package]
name = "backend"
version = "0.1.0"
authors = ["Siemen\\ <siemenkraayenbrink@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
rocket = "0.5.0-rc.1"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "search"
path = "src/search.rs"

